# ENPH-353-COMPETITION

./: .gitignore  .startComp.bash.swp  .startRandomComp.bash.swp  353_Clueboard_Reader_NN.ipynb  IMPLEMENTATION_SUMMARY.md  README.md  analyze_consistency.py  analyze_dataset_quality.py  check_velocity_dist.py  gui.py  startComp.bash  startRandomComp.bash  startTest.bash  testBoardDetector.bash  test_controller.sh  troubleshoot.sh
cnn_trainer/: README.md  (+16 more)
src/competition/: CMakeLists.txt  comp_launch.launch  gui.py  package.xml
src/competition/clueboard_detection/: CMakeLists.txt  board_detector.py  board_reader.py
src/competition/clueboard_detection/roboflow_data_v2/: data.yaml
src/competition/clueboard_detection/roboflow_data_v2/train/: labels.cache
src/competition/clueboard_detection/src/: board_detector.py  model_test.py
src/competition/launch/: comp_launch.launch
src/competition/line_following/: CMakeLists.txt  inference_node.py
src/time_trials/: CMakeLists.txt
src/time_trials/launch/: teleop.launch  time_trials_launch.launch
src/time_trials/scripts/: check_controller.sh
src/time_trials/src/: my_controller.py  teleop_ps4.py  test_controller.py
src/time_trials/src/LineFollowing/: ImageProcessing.py  README_MODEL_PATHS.md  best_model.pth  camera_viewer.py  check_res.py  check_topics.py  count_params.py  data_collector.py  inference_angular.py  inference_node.py  model.py  model_angular.py  model_vision.py  model_xLidar.py  run_image_processing.sh  train_angular.py  train_model.py  train_model_xLidar.py  train_vision.py  visualize_prediction.py
(+763 files in other folders)
