<?xml version="1.0"?>
<package format="2">
  <name>competition</name>
  <version>1.0.0</version>
  <description>Competition launch files and utilities</description>

  <maintainer email="team@example.com">Team EMAG</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>line_following</exec_depend>
  <exec_depend>clueboard_detection</exec_depend>

</package>
